Fix navbar overflowing bug

--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -9,7 +9,7 @@
   background-color: white;
   position: sticky;
   top: 0;
-  z-index: 1000;
+  z-index: 3;
   border-bottom: 1px solid #e8e8e8;
   padding: 10px 50px;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
@@ -108,14 +108,14 @@ h1 {
   }
 
   .mobile-navUl {
+    display: flex;
     width: 45%;
     height: 100vh;
-    display: flex;
     flex-direction: column;
     align-items: center;
     gap: 30px;
     position: absolute;
-    top: 46px;
+    top: 5px;
     right: 0;
     background-color: rgba(32, 136, 255, 0.9);
     padding: 30px 0;
@@ -128,7 +128,29 @@ h1 {
   }
 }
 
+@media screen and (max-width: 500px) {
+  .mobile-navUl {
+    width: 50%;
+  }
+
+  .nav-link.mobile {
+    font-size: 12px;
+  }
+}
+
 @media screen and (max-width: 320px) {
+  .navBar {
+    height: 45px;
+  }
+
+  .mobile-navUl {
+    width: 60%;
+  }
+
+  .nav-link.mobile {
+    font-size: 11px;
+  }
+
   h1 {
     display: none;
   }
